src/objects/Account_Exception__c.object
<CustomObject>
    <description>This Object is created to store the account exceptions</description>
    <fields>
        <fullName>Change_Effective_Date__c</fullName>
        <formula>DASR_Request__r.Change_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DASR_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DASR Request</label>
        <referenceTo>DASR_Request__c</referenceTo>
        <relationshipLabel>Account_Exceptions</relationshipLabel>
        <relationshipName>Account_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exception_Type_Code__c</fullName>
        <label>Exception_Type_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LDC Account</label>
        <referenceTo>LDC_Account__c</referenceTo>
        <relationshipLabel>Account_Exceptions</relationshipLabel>
        <relationshipName>Account_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_EDI_Update__c</fullName>
        <formula>DASR_Request__r.Last_EDI_Update_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last EDI Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Most_Recent__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is created to check whether the Account Exception is most recent or not DTM151</description>
        <label>Most Recent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Description__c</fullName>
        <label>Reason_Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Transaction_ID__c</fullName>
        <label>Sender_Transaction_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Account_Exception</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Account_Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account_Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>